feat: retrieve all pages

--- a/src/notebooks/dataset.ipynb
+++ b/src/notebooks/dataset.ipynb
@@ -334,19 +334,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['FACE BOOK Facebook UK Limited \\n', \"10 Brock Street Regent's Place Lond\\n\", 'on NW1 3FG \\n', 'Line# \\n', '1 \\n', '2 \\n', '3 \\n', '4 \\n', '5 \\n', '6 \\n', '7 \\n', '8 9 \\n', '10 \\n', '11 \\n', '12 \\n', '13 14 15 16 ---\\n', 'LEGAL ENTITY: THE LABOUR PARTY BILL \\n', 'TO: THE LABOUR PARTY The \\n', 'Labour Party, Souths ide, 105 Victoria Street, London \\n', 'LONDON \\n', 'SW1E6QT \\n', 'UNITED K INGDOM ATTN: Accounts Payable \\n', 'VAT Reg.No: Advertiser: PO Numbe\\n', 'r: THE LABOUR PARTY \\n', '0 \\n', 'Description -Advertising Services \\n', 'GE 2019 Stat ics ALL GE2019 • \\n', 'AB Polling Day \\n', 'GE2019 - GOTV FS per \\n', 'GE2019 • GOTV NHS per GE2019 -JC -Jessi \\n', 'GOTV \\n', 'GE2019 - JC -Jessi story GE2019 -JC -right track GE2019 -\\n', 'JC -top tax bracket GE2019 -JMCD -Scotl\\n', 'and \\n', 'GE2019 -LGI article GE2019 -min\\n', 'er endorsement GE2019 -mirror boris quote GE2019 -Pensions Conversi\\n', 'on campaign -Version 2 G\\n', 'E2019 -Pens ions GOTV \\n', 'GE2019 -personal manifesto \\n', 'GE2019- Polling D ay-rail fares INVOICE \\n', 'Invoice#. -\\xad\\n', 'Invoice Date: 02-Jan-2020 \\n', 'Billing Period: Dec-19 \\n', 'Account Id / Group: Payment Terms: NET 30 \\n', 'Page: 1 of 8 \\n', 'Total \\n', '2,091.08 4,941.61 1,945.59 1,822.04 5,006.82 58,828.99 2,977.62 8,\\n', '531.82 7,385.38 44,084.51 12,507.48 2,734.29 35,000.00 2,785.25 6,446.90 3,993.60 \\n', 'INVOICE NUMBER MUST BE REFERENCED ON ALL PAYMENTS \\n', 'Subtotal: Freight: \\n', 'VAT@20%: \\n', 'www.facebook.com 913,863.09 \\n', '0.00 \\n', '182,772.62 \\n', \"'*'The ASBOF levy is 0.1% of pre-tsx advertis ing spend (913.86 GBPJ. If you would lll<e to pay this voluntary levy, please remit 1,0fll,549.57 GBP (total invoice amount Inc. levy) \\n\", 'to Fac:ebool< UK Umited , who will remit the funds to ASBOF on your behalf. The ASBOF levy finances advertising sell-regulation callied out by the Advertising \\n', \"standards Authority • http:ltwww.asbotco.ul</ 'The small levy that makes a big difference• .. • \"]\n"
+      "[['FACE BOOK Facebook UK Limited \\n', \"10 Brock Street Regent's Place Lond\\n\", 'on NW1 3FG \\n', 'Line# \\n', '1 \\n', '2 \\n', '3 \\n', '4 \\n', '5 \\n', '6 \\n', '7 \\n', '8 9 \\n', '10 \\n', '11 \\n', '12 \\n', '13 14 15 16 ---\\n', 'LEGAL ENTITY: THE LABOUR PARTY BILL \\n', 'TO: THE LABOUR PARTY The \\n', 'Labour Party, Souths ide, 105 Victoria Street, London \\n', 'LONDON \\n', 'SW1E6QT \\n', 'UNITED K INGDOM ATTN: Accounts Payable \\n', 'VAT Reg.No: Advertiser: PO Numbe\\n', 'r: THE LABOUR PARTY \\n', '0 \\n', 'Description -Advertising Services \\n', 'GE 2019 Stat ics ALL GE2019 • \\n', 'AB Polling Day \\n', 'GE2019 - GOTV FS per \\n', 'GE2019 • GOTV NHS per GE2019 -JC -Jessi \\n', 'GOTV \\n', 'GE2019 - JC -Jessi story GE2019 -JC -right track GE2019 -\\n', 'JC -top tax bracket GE2019 -JMCD -Scotl\\n', 'and \\n', 'GE2019 -LGI article GE2019 -min\\n', 'er endorsement GE2019 -mirror boris quote GE2019 -Pensions Conversi\\n', 'on campaign -Version 2 G\\n', 'E2019 -Pens ions GOTV \\n', 'GE2019 -personal manifesto \\n', 'GE2019- Polling D ay-rail fares INVOICE \\n', 'Invoice#. -\\xad\\n', 'Invoice Date: 02-Jan-2020 \\n', 'Billing Period: Dec-19 \\n', 'Account Id / Group: Payment Terms: NET 30 \\n', 'Page: 1 of 8 \\n', 'Total \\n', '2,091.08 4,941.61 1,945.59 1,822.04 5,006.82 58,828.99 2,977.62 8,\\n', '531.82 7,385.38 44,084.51 12,507.48 2,734.29 35,000.00 2,785.25 6,446.90 3,993.60 \\n', 'INVOICE NUMBER MUST BE REFERENCED ON ALL PAYMENTS \\n', 'Subtotal: Freight: \\n', 'VAT@20%: \\n', 'www.facebook.com 913,863.09 \\n', '0.00 \\n', '182,772.62 \\n', \"'*'The ASBOF levy is 0.1% of pre-tsx advertis ing spend (913.86 GBPJ. If you would lll<e to pay this voluntary levy, please remit 1,0fll,549.57 GBP (total invoice amount Inc. levy) \\n\", 'to Fac:ebool< UK Umited , who will remit the funds to ASBOF on your behalf. The ASBOF levy finances advertising sell-regulation callied out by the Advertising \\n', \"standards Authority • http:ltwww.asbotco.ul</ 'The small levy that makes a big difference• .. • \"]]\n"
      ]
     }
    ],
    "source": [
-    "print(scraper.get_invoice(invoice_id))"
+    "print(scraper.get_invoice(invoice_id, page=0))"
    ]
   },
   {
@@ -358,20 +358,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "scraper.get_all_invoices()"
+    "# scraper.get_all_invoices()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "scraper.invoices"
+    "# scraper.invoices"
    ]
   }
  ],
