feat: visualise retrieved data (#3)
* feat: visualize shape of retrieved data

--- a/src/notebooks/dataset_v2.ipynb
+++ b/src/notebooks/dataset_v2.ipynb
@@ -9,12 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
+    "import pandas as pd\n",
     "\n",
     "module_path = os.path.abspath(os.path.join(os.pardir, os.pardir))\n",
     "if module_path not in sys.path:\n",
@@ -23,19 +24,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "from src.utils.scrape_v2 import Scraper\n",
-    "from src.config import default_path_to_csv\n",
+    "from src.config import default_path_to_csv, output_path\n",
     "\n",
     "scraper = Scraper()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +276,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +350,7 @@
        " (66836, 'Freight:', '0.06')]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,11 +368,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fetching data from all invoices\n"
+     ]
+    }
+   ],
+   "source": [
+    "scraper.get_all_invoices()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualizing retrieved data points\n",
+    "The scraper was stopped early to get peak into the final shape of retrieved data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# scraper.get_all_invoices()"
+    "output_file = output_path + 'out.' + scraper.output_filetype\n",
+    "data_points = pd.read_json(output_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>66836</td>\n",
+       "      <td>GE 2019 Statics ALL .08</td>\n",
+       "      <td>2.081</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>66836</td>\n",
+       "      <td>2 GE2019 - AB Polling Day</td>\n",
+       "      <td>4,941.61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>66836</td>\n",
+       "      <td>3 GE2019 - GOTV FS per 4 GE2019 - GOTV NHS per...</td>\n",
+       "      <td>1,945.59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>66836</td>\n",
+       "      <td>5 GE2019 - JC - Jessi GOTV</td>\n",
+       "      <td>5,006.62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>66836</td>\n",
+       "      <td>6 GE2019 - JC - Jessi story 7 GE2049 - JC - ri...</td>\n",
+       "      <td>58,828.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>330</th>\n",
+       "      <td>68766</td>\n",
+       "      <td>15 Instagram - KS - BATT - A1 - 002 - OTHER</td>\n",
+       "      <td>271.52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>331</th>\n",
+       "      <td>68766</td>\n",
+       "      <td>16 Instagram - KS - BEDF - B2-002- OTHER INVOI...</td>\n",
+       "      <td>258.92</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>332</th>\n",
+       "      <td>68766</td>\n",
+       "      <td>4 Grand Canal Square Freight: Grand Canal Harb...</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>333</th>\n",
+       "      <td>68766</td>\n",
+       "      <td>DL One Piece Mailer containing 2x Letters encl...</td>\n",
+       "      <td>£</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>334</th>\n",
+       "      <td>68766</td>\n",
+       "      <td>Letter Less than 100grms 1,603,049 £ £ £ PCC D...</td>\n",
+       "      <td>£</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>335 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         0                                                  1          2\n",
+       "0    66836                            GE 2019 Statics ALL .08      2.081\n",
+       "1    66836                          2 GE2019 - AB Polling Day   4,941.61\n",
+       "2    66836  3 GE2019 - GOTV FS per 4 GE2019 - GOTV NHS per...   1,945.59\n",
+       "3    66836                         5 GE2019 - JC - Jessi GOTV   5,006.62\n",
+       "4    66836  6 GE2019 - JC - Jessi story 7 GE2049 - JC - ri...  58,828.99\n",
+       "..     ...                                                ...        ...\n",
+       "330  68766        15 Instagram - KS - BATT - A1 - 002 - OTHER     271.52\n",
+       "331  68766  16 Instagram - KS - BEDF - B2-002- OTHER INVOI...     258.92\n",
+       "332  68766  4 Grand Canal Square Freight: Grand Canal Harb...       0.00\n",
+       "333  68766  DL One Piece Mailer containing 2x Letters encl...          £\n",
+       "334  68766  Letter Less than 100grms 1,603,049 £ £ £ PCC D...          £\n",
+       "\n",
+       "[335 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_points.iloc[: , :3]"
    ]
   },
   {
