--- a/src/notebooks/dataset_v2.ipynb
+++ b/src/notebooks/dataset_v2.ipynb
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -470,58 +470,58 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>330</th>\n",
-       "      <td>68766</td>\n",
-       "      <td>15 Instagram - KS - BATT - A1 - 002 - OTHER</td>\n",
-       "      <td>271.52</td>\n",
+       "      <th>14713</th>\n",
+       "      <td>68003</td>\n",
+       "      <td>CCHQ Boris Johnson GE Campaign 2019 1 20 To th...</td>\n",
+       "      <td>98,153.10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>331</th>\n",
-       "      <td>68766</td>\n",
-       "      <td>16 Instagram - KS - BEDF - B2-002- OTHER INVOI...</td>\n",
-       "      <td>258.92</td>\n",
+       "      <th>14714</th>\n",
+       "      <td>68003</td>\n",
+       "      <td>Payment details: Carriage:</td>\n",
+       "      <td>£0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>332</th>\n",
-       "      <td>68766</td>\n",
-       "      <td>4 Grand Canal Square Freight: Grand Canal Harb...</td>\n",
-       "      <td>0.00</td>\n",
+       "      <th>14715</th>\n",
+       "      <td>68003</td>\n",
+       "      <td>CCHQ Boris Johnson GE Campaign 2019 1 20 To th...</td>\n",
+       "      <td>98,153.10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>333</th>\n",
-       "      <td>68766</td>\n",
-       "      <td>DL One Piece Mailer containing 2x Letters encl...</td>\n",
-       "      <td>£</td>\n",
+       "      <th>14716</th>\n",
+       "      <td>68003</td>\n",
+       "      <td>Payment details: Carriage:</td>\n",
+       "      <td>£0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>334</th>\n",
-       "      <td>68766</td>\n",
-       "      <td>Letter Less than 100grms 1,603,049 £ £ £ PCC D...</td>\n",
-       "      <td>£</td>\n",
+       "      <th>14717</th>\n",
+       "      <td>68003</td>\n",
+       "      <td></td>\n",
+       "      <td>£96,187.50</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>335 rows × 3 columns</p>\n",
+       "<p>14718 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         0                                                  1          2\n",
-       "0    66836                            GE 2019 Statics ALL .08      2.081\n",
-       "1    66836                          2 GE2019 - AB Polling Day   4,941.61\n",
-       "2    66836  3 GE2019 - GOTV FS per 4 GE2019 - GOTV NHS per...   1,945.59\n",
-       "3    66836                         5 GE2019 - JC - Jessi GOTV   5,006.62\n",
-       "4    66836  6 GE2019 - JC - Jessi story 7 GE2049 - JC - ri...  58,828.99\n",
-       "..     ...                                                ...        ...\n",
-       "330  68766        15 Instagram - KS - BATT - A1 - 002 - OTHER     271.52\n",
-       "331  68766  16 Instagram - KS - BEDF - B2-002- OTHER INVOI...     258.92\n",
-       "332  68766  4 Grand Canal Square Freight: Grand Canal Harb...       0.00\n",
-       "333  68766  DL One Piece Mailer containing 2x Letters encl...          £\n",
-       "334  68766  Letter Less than 100grms 1,603,049 £ £ £ PCC D...          £\n",
+       "           0                                                  1           2\n",
+       "0      66836                            GE 2019 Statics ALL .08       2.081\n",
+       "1      66836                          2 GE2019 - AB Polling Day    4,941.61\n",
+       "2      66836  3 GE2019 - GOTV FS per 4 GE2019 - GOTV NHS per...    1,945.59\n",
+       "3      66836                         5 GE2019 - JC - Jessi GOTV    5,006.62\n",
+       "4      66836  6 GE2019 - JC - Jessi story 7 GE2049 - JC - ri...   58,828.99\n",
+       "...      ...                                                ...         ...\n",
+       "14713  68003  CCHQ Boris Johnson GE Campaign 2019 1 20 To th...   98,153.10\n",
+       "14714  68003                         Payment details: Carriage:       £0.00\n",
+       "14715  68003  CCHQ Boris Johnson GE Campaign 2019 1 20 To th...   98,153.10\n",
+       "14716  68003                         Payment details: Carriage:       £0.00\n",
+       "14717  68003                                                     £96,187.50\n",
        "\n",
-       "[335 rows x 3 columns]"
+       "[14718 rows x 3 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
