--- a/src/notebooks/classification.ipynb
+++ b/src/notebooks/classification.ipynb
@@ -25,7 +25,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/max/Desktop/IDP/political_spending_uk/new_env/lib/python3.8/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from src.models.classifier import Classifier\n",
     "\n",
@@ -108,55 +117,55 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14713</th>\n",
-       "      <td>68003</td>\n",
-       "      <td>CCHQ Boris Johnson GE Campaign 2019 1 20 To th...</td>\n",
-       "      <td>98,153.10</td>\n",
+       "      <th>330</th>\n",
+       "      <td>68766</td>\n",
+       "      <td>15 Instagram - KS - BATT - A1 - 002 - OTHER</td>\n",
+       "      <td>271.52</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14714</th>\n",
-       "      <td>68003</td>\n",
-       "      <td>Payment details: Carriage:</td>\n",
-       "      <td>£0.00</td>\n",
+       "      <th>331</th>\n",
+       "      <td>68766</td>\n",
+       "      <td>16 Instagram - KS - BEDF - B2-002- OTHER INVOI...</td>\n",
+       "      <td>258.92</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14715</th>\n",
-       "      <td>68003</td>\n",
-       "      <td>CCHQ Boris Johnson GE Campaign 2019 1 20 To th...</td>\n",
-       "      <td>98,153.10</td>\n",
+       "      <th>332</th>\n",
+       "      <td>68766</td>\n",
+       "      <td>4 Grand Canal Square Freight: Grand Canal Harb...</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14716</th>\n",
-       "      <td>68003</td>\n",
-       "      <td>Payment details: Carriage:</td>\n",
-       "      <td>£0.00</td>\n",
+       "      <th>333</th>\n",
+       "      <td>68766</td>\n",
+       "      <td>DL One Piece Mailer containing 2x Letters encl...</td>\n",
+       "      <td>£</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14717</th>\n",
-       "      <td>68003</td>\n",
-       "      <td></td>\n",
-       "      <td>£96,187.50</td>\n",
+       "      <th>334</th>\n",
+       "      <td>68766</td>\n",
+       "      <td>Letter Less than 100grms 1,603,049 £ £ £ PCC D...</td>\n",
+       "      <td>£</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>14718 rows × 3 columns</p>\n",
+       "<p>335 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           0                                                  1           2\n",
-       "0      66836                            GE 2019 Statics ALL .08       2.081\n",
-       "1      66836                          2 GE2019 - AB Polling Day    4,941.61\n",
-       "2      66836  3 GE2019 - GOTV FS per 4 GE2019 - GOTV NHS per...    1,945.59\n",
-       "3      66836                         5 GE2019 - JC - Jessi GOTV    5,006.62\n",
-       "4      66836  6 GE2019 - JC - Jessi story 7 GE2049 - JC - ri...   58,828.99\n",
-       "...      ...                                                ...         ...\n",
-       "14713  68003  CCHQ Boris Johnson GE Campaign 2019 1 20 To th...   98,153.10\n",
-       "14714  68003                         Payment details: Carriage:       £0.00\n",
-       "14715  68003  CCHQ Boris Johnson GE Campaign 2019 1 20 To th...   98,153.10\n",
-       "14716  68003                         Payment details: Carriage:       £0.00\n",
-       "14717  68003                                                     £96,187.50\n",
+       "         0                                                  1          2\n",
+       "0    66836                            GE 2019 Statics ALL .08      2.081\n",
+       "1    66836                          2 GE2019 - AB Polling Day   4,941.61\n",
+       "2    66836  3 GE2019 - GOTV FS per 4 GE2019 - GOTV NHS per...   1,945.59\n",
+       "3    66836                         5 GE2019 - JC - Jessi GOTV   5,006.62\n",
+       "4    66836  6 GE2019 - JC - Jessi story 7 GE2049 - JC - ri...  58,828.99\n",
+       "..     ...                                                ...        ...\n",
+       "330  68766        15 Instagram - KS - BATT - A1 - 002 - OTHER     271.52\n",
+       "331  68766  16 Instagram - KS - BEDF - B2-002- OTHER INVOI...     258.92\n",
+       "332  68766  4 Grand Canal Square Freight: Grand Canal Harb...       0.00\n",
+       "333  68766  DL One Piece Mailer containing 2x Letters encl...          £\n",
+       "334  68766  Letter Less than 100grms 1,603,049 £ £ £ PCC D...          £\n",
        "\n",
-       "[14718 rows x 3 columns]"
+       "[335 rows x 3 columns]"
       ]
      },
      "execution_count": 3,
@@ -170,14 +179,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Classifying 14718 data points\n"
+      "Classifying 335 data points\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/max/Desktop/IDP/political_spending_uk/new_env/lib/python3.8/site-packages/torch/functional.py:864: UserWarning: MPS: unique_consecutive op is supported natively starting from macOS 13.0. Falling back on CPU. This may have performace implications. (Triggered internally at /Users/runner/work/pytorch/pytorch/pytorch/aten/src/ATen/native/mps/operations/Unique.mm:334.)\n",
+      "  output, inverse_indices, counts = _VF.unique_consecutive(  # type: ignore[attr-defined]\n",
+      "/Users/max/Desktop/IDP/political_spending_uk/new_env/lib/python3.8/site-packages/transformers/models/bart/modeling_bart.py:1538: UserWarning: MPS: nonzero op is supported natively starting from macOS 13.0. Falling back on CPU. This may have performance implications. (Triggered internally at /Users/runner/work/pytorch/pytorch/pytorch/aten/src/ATen/native/mps/operations/Indexing.mm:218.)\n",
+      "  sentence_representation = hidden_states[eos_mask, :].view(hidden_states.size(0), -1, hidden_states.size(-1))[\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving predictions\n"
      ]
     }
    ],
@@ -194,9 +220,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>66836</td>\n",
+       "      <td>GE 2019 Statics ALL .08</td>\n",
+       "      <td>2.081</td>\n",
+       "      <td>Production Services</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>66836</td>\n",
+       "      <td>2 GE2019 - AB Polling Day</td>\n",
+       "      <td>4,941.61</td>\n",
+       "      <td>Campaign activity</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>66836</td>\n",
+       "      <td>3 GE2019 - GOTV FS per 4 GE2019 - GOTV NHS per...</td>\n",
+       "      <td>1,945.59</td>\n",
+       "      <td>Campaign activity</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>66836</td>\n",
+       "      <td>5 GE2019 - JC - Jessi GOTV</td>\n",
+       "      <td>5,006.62</td>\n",
+       "      <td>GOTV</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>66836</td>\n",
+       "      <td>6 GE2019 - JC - Jessi story 7 GE2049 - JC - ri...</td>\n",
+       "      <td>58,828.99</td>\n",
+       "      <td>Campaign activity</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>330</th>\n",
+       "      <td>68766</td>\n",
+       "      <td>15 Instagram - KS - BATT - A1 - 002 - OTHER</td>\n",
+       "      <td>271.52</td>\n",
+       "      <td>Other forms of research</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>331</th>\n",
+       "      <td>68766</td>\n",
+       "      <td>16 Instagram - KS - BEDF - B2-002- OTHER INVOI...</td>\n",
+       "      <td>258.92</td>\n",
+       "      <td>Social media advertising</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>332</th>\n",
+       "      <td>68766</td>\n",
+       "      <td>4 Grand Canal Square Freight: Grand Canal Harb...</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>Transport</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>333</th>\n",
+       "      <td>68766</td>\n",
+       "      <td>DL One Piece Mailer containing 2x Letters encl...</td>\n",
+       "      <td>£</td>\n",
+       "      <td>Campaign activity</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>334</th>\n",
+       "      <td>68766</td>\n",
+       "      <td>Letter Less than 100grms 1,603,049 £ £ £ PCC D...</td>\n",
+       "      <td>£</td>\n",
+       "      <td>Consultancy</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>335 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         0                                                  1          2  \\\n",
+       "0    66836                            GE 2019 Statics ALL .08      2.081   \n",
+       "1    66836                          2 GE2019 - AB Polling Day   4,941.61   \n",
+       "2    66836  3 GE2019 - GOTV FS per 4 GE2019 - GOTV NHS per...   1,945.59   \n",
+       "3    66836                         5 GE2019 - JC - Jessi GOTV   5,006.62   \n",
+       "4    66836  6 GE2019 - JC - Jessi story 7 GE2049 - JC - ri...  58,828.99   \n",
+       "..     ...                                                ...        ...   \n",
+       "330  68766        15 Instagram - KS - BATT - A1 - 002 - OTHER     271.52   \n",
+       "331  68766  16 Instagram - KS - BEDF - B2-002- OTHER INVOI...     258.92   \n",
+       "332  68766  4 Grand Canal Square Freight: Grand Canal Harb...       0.00   \n",
+       "333  68766  DL One Piece Mailer containing 2x Letters encl...          £   \n",
+       "334  68766  Letter Less than 100grms 1,603,049 £ £ £ PCC D...          £   \n",
+       "\n",
+       "                            3  \n",
+       "0        Production Services   \n",
+       "1           Campaign activity  \n",
+       "2           Campaign activity  \n",
+       "3                        GOTV  \n",
+       "4           Campaign activity  \n",
+       "..                        ...  \n",
+       "330   Other forms of research  \n",
+       "331  Social media advertising  \n",
+       "332                 Transport  \n",
+       "333         Campaign activity  \n",
+       "334               Consultancy  \n",
+       "\n",
+       "[335 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "classifier.predictions_as_df\n"
    ]
@@ -204,7 +375,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('nlp')",
+   "display_name": "new_env",
    "language": "python",
    "name": "python3"
   },
@@ -218,12 +389,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "bfc06090c28f9a2b1bc5cad670ac112515b1c0f123b001add159cd7414fa589d"
+    "hash": "9f3378fab82134474f78ccb088e1cfa987ea38ea6cf4fc7be9ec246b736cca8c"
    }
   }
  },
