Added fastapi and streamlit demo

--- a/src/notebooks/classification.ipynb
+++ b/src/notebooks/classification.ipynb
@@ -23,22 +23,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.models.classifier_v2 import Classifier\n",
+    "\n",
+    "classifier = Classifier()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.config import data_dir\n",
+    "\n",
+    "classifier._read_data(data_dir + '/v2/out.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classifying 335 data points\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/max/Desktop/IDP/political_spending_uk/new_env/lib/python3.8/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "/Users/max/Desktop/IDP/political_spending_uk/new_env/lib/python3.8/site-packages/torch/functional.py:864: UserWarning: MPS: unique_consecutive op is supported natively starting from macOS 13.0. Falling back on CPU. This may have performace implications. (Triggered internally at /Users/runner/work/pytorch/pytorch/pytorch/aten/src/ATen/native/mps/operations/Unique.mm:334.)\n",
+      "  output, inverse_indices, counts = _VF.unique_consecutive(  # type: ignore[attr-defined]\n",
+      "/Users/max/Desktop/IDP/political_spending_uk/new_env/lib/python3.8/site-packages/transformers/models/bart/modeling_bart.py:1538: UserWarning: MPS: nonzero op is supported natively starting from macOS 13.0. Falling back on CPU. This may have performance implications. (Triggered internally at /Users/runner/work/pytorch/pytorch/pytorch/aten/src/ATen/native/mps/operations/Indexing.mm:218.)\n",
+      "  sentence_representation = hidden_states[eos_mask, :].view(hidden_states.size(0), -1, hidden_states.size(-1))[\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving predictions\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "_save_predictions() missing 1 required positional argument: 'output_filetype'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m classifier\u001b[39m.\u001b[39;49mclassify()\n",
+      "File \u001b[0;32m~/Desktop/IDP/political_spending_uk/src/models/classifier_v2.py:79\u001b[0m, in \u001b[0;36mclassify\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     76\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpredictions\u001b[39m.\u001b[39mappend((\u001b[39mid\u001b[39m, description, amount, label))\n\u001b[1;32m     78\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mSaving predictions\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> 79\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpredictions_as_df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpredictions)\n\u001b[1;32m     80\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_save_predictions()\n",
+      "\u001b[0;31mTypeError\u001b[0m: _save_predictions() missing 1 required positional argument: 'output_filetype'"
      ]
     }
    ],
    "source": [
-    "from src.models.classifier import Classifier\n",
-    "\n",
-    "classifier = Classifier()"
+    "classifier.classify()"
    ]
   },
   {
@@ -46,6 +94,15 @@
    "metadata": {},
    "source": [
     "### View data points"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.models."
    ]
   },
   {
